2009-01-14  David Shaw  <dshaw@jabberwocky.com>

	* Makefile.am: Autogenerate paperkey.txt from paperkey.1 when
	cross compiling.

	* configure.ac, Makefile.am: Don't run selftest when cross
	compiling.

	* Makefile.am: When cross compiling for Win32, add README.WIN32, a
	regular text file version of the man page, and the Win32 binary.

	* README: Clarify what universal binaries are good for.

	* configure.ac: Add "-win32" to dist version string when cross
	compiling.

	* README.WIN32: New.

2008-02-01  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

	* NEWS, configure.ac: Preparing 0.8 release.

2008-01-31  David Shaw  <dshaw@jabberwocky.com>

	* parse.c (read_secrets_file): Skip \r lines as well for Win32.

	* NEWS: Update for 0.8: --file-format, --comment, and SHA-1 fixes.

	* paperkey.c (usage, main), output.c (output_start): Add --comment
	option to include an arbitrary comment in base16 output.

	* paperkey.1: Document --file-format and --comment.

	* README, paperkey.spec.in: Slightly more elegant language.

2008-01-30  David Shaw  <dshaw@jabberwocky.com>

	* parse.c (read_secrets_file): Ignore blank lines in text input.

2007-11-02  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.1: Escape dashes in man page.  From Peter Palfrader.

2007-11-01  David Shaw  <dshaw@jabberwocky.com>

	* output.h, output.c (output_file_format): New function to print
	our file format into the archive.
	
	* paperkey.c (main), output.c (output_start): Use it here.
	Suggested by Brendan Kidwell.

2007-10-03  David Shaw  <dshaw@jabberwocky.com>

	* configure.ac: NEWS: Post-release commit.

	* README, configure.ac, NEWS: Preparing 0.7 release.

2007-09-25  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.c (main): There is no such thing as an "auto"
	--output-type.

	* parse.c (parse): Just in case, check for a short read on the
	packet.

2007-09-24  David Shaw  <dshaw@jabberwocky.com>
